bug(modal): fix modal align-items on mobile

--- a/src/components/modal/styles.scss
+++ b/src/components/modal/styles.scss
@@ -40,6 +40,10 @@
     transition: all 300ms ease-in-out;
     transform: translateY(-200%);
 
+    @include onMobile {
+      align-items: flex-start;
+    }
+
     &.start {
       align-items: start;
     }
